--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,9 @@
 @import url('./vendor/normalize.css');
-
 @import url('./blocks/header/header.css');
 @import url('./blocks/header/__title/header__title.css');
 @import url('./blocks/main/main.css');
 @import url('./blocks/add-todo/add-todo.css');
 @import url('./blocks/todo-list/todo-list.css');
-
 @import url('./blocks/todo/todo.css');
 @import url('./blocks/todo/__description/todo__description.css');
 @import url('./blocks/todo/__edit-btn/todo__edit-btn.css');
@@ -13,6 +11,7 @@
 @import url('./blocks/todo/__description/todo__description.css');
 @import url('./blocks/todo/__description/_status/todo__description_status_done.css');
 @import url('./blocks/add-todo/add-todo.css');
+@import url('./blocks/todo/__input/todo__input.css');
 
 
 
