Structure project was changed

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
+.main {
+    display: flex;
+    flex-direction: column;
+}
+
 .add-todo {
     margin: 0 auto 1rem;
     align-items: center;
     display: flex;
     column-gap: 5px;
 }
+
